# Modern_CPP

./: .gitignore  README.md
ClassExamples/lec_1/: CMakeLists.txt
ClassExamples/lec_5/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
ClassExamples/lec_5/example_3/: a.out  write_bin.cpp
HW1/: guessing_game
cpp-homeworks/homework_1/task_2/: CMakeLists.txt
cpp-homeworks/homework_2/task_1/: CMakeLists.txt
cpp-homeworks/homework_2/task_1/src/: guessing_game.cpp
cpp-homeworks/homework_3/: CMakeLists.txt
cpp-homeworks/homework_3/src/: create_html.cpp  html_writer_functions.cpp  image_browser_functions.cpp
cpp-homeworks/homework_5/: CMakeLists.txt
cpp-homeworks/homework_5/include/: homework_5.h
cpp-homeworks/homework_5/src/: my_main.cpp  serialization.cpp
